feat: add basic funtional (Sat, May 14, 2022 18.06.20)

--- a/cssMemSlider/index.html
+++ b/cssMemSlider/index.html
@@ -8,11 +8,11 @@
     <title>cssMemSlider</title>
 </head>
 <body>
-    <div class="wrapper">
-        <input type="radio" name="slider" id="slide1" class="slider-nav" checked>
-        <input type="radio" name="slider" id="slide2" class="slider-nav">
-        <input type="radio" name="slider" id="slide3" class="slider-nav">
-        <input type="radio" name="slider" id="slide4" class="slider-nav">
+<div class="wrapper">
+    <input type="radio" name="slider" id="slide1" class="slider-nav" checked>
+    <input type="radio" name="slider" id="slide2" class="slider-nav">
+    <input type="radio" name="slider" id="slide3" class="slider-nav">
+    <input type="radio" name="slider" id="slide4" class="slider-nav">
         <div class="slider-wrapper">
             <div class="slider-container">
                 <img src="assets/dies-from-cringe.png" alt="mem" class="slider-img">
@@ -36,5 +36,6 @@
             <label for="slide4"></label>
         </div>
     </div>
+</div>
 </body>
 </html>
