feat: make responsive (Sat, 14 May, 2022 22.04.30)

--- a/cssMemSlider/index.html
+++ b/cssMemSlider/index.html
@@ -30,12 +30,19 @@
             </div>
         </div>
         <div class="controls">
-            <label for="slide1"></label>
-            <label for="slide2"></label>
-            <label for="slide3"></label>
-            <label for="slide4"></label>
+            <label for="slide1">
+                <div class="control-point"></div>
+            </label>
+            <label for="slide2">
+                <div class="control-point"></div>
+            </label>
+            <label for="slide3">
+                <div class="control-point"></div>
+            </label>
+            <label for="slide4">
+                <div class="control-point"></div>
+            </label>
         </div>
     </div>
-</div>
 </body>
 </html>
